--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mon premier projet Git</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <H1>Premier site Git</H1>
