--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <H1>Premier site Git</H1>
+<p> Ah et encore énormément de chose</p>
 <p>La on vas mettre énormément d'infos</p>
 
 </body>
